--- a/templates/historia.html
+++ b/templates/historia.html
@@ -279,7 +279,7 @@
 <!-- Tragédia de 2008 -->
 <section class="py-5 bg-light">
     <div class="container">
-        <h2 class="text-center mb-4">Tragédia de 13 de setembro de 2008</h2>
+        <h2 class="text-center mb-4">Memorial de 13 de setembro de 2008</h2>
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <div class="card border-0 shadow">
