--- a/static/styles/modular/default.css
+++ b/static/styles/modular/default.css
@@ -9,7 +9,7 @@
 
 /* Estilos Globais */
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: var(--font-size-base);
   background-color: var(--bg-light);
   overflow-x: hidden; /* Impede rolagem horizontal */
