--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     
     <!-- CSS Personalizado Modular -->
-    <link rel="stylesheet" href="{% static 'styles/modular/main.css' %}">    
+    <link rel="stylesheet" href="{% static 'styles/modular/main.css' %}">
+    
+    <!-- Fontes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,500;1,600&display=swap" rel="stylesheet"> 
 
     {% block extra_css %}{% endblock %}
 
